Fixed pie chart clipping and applied boxshadow to home images

--- a/SourceCode_and_Documentation/client/src/AT3K/pages/Home.module.scss
+++ b/SourceCode_and_Documentation/client/src/AT3K/pages/Home.module.scss
@@ -19,7 +19,8 @@
     .image {
         width: 50%;
         float: right;
-        margin-left: 10px;
+        margin-left: 50px;
+        box-shadow:0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     }
 }
 
@@ -29,4 +30,6 @@
 
 .headerImage {
     width: 100%;
+    margin-top: 20px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
